--- a/P2/P2.md
+++ b/P2/P2.md
@@ -12,55 +12,64 @@ You should see something that looks like this. There are three important parts w
 
 That big white square in the middle is your first View Controller. Any changes you make to this view will appear on your screen when you run the app.
 
-Now, for our Pin Drop app, there are 3 parts in the interface we're building:
-1. A label to display the title of the game
-2. A text field to input your guess
-3. A button to submit your guess
+Now, for our Pin Drop app, we will simply be using a map where you'll be able to drop some pins.
 
 Let's start building the screen!
 
-### You're a label, Harry
+### Navigation Controller
 
-In order to display the title of the game, we are going to work with the Interface builder and the UI Palette. Go ahead to the UI Palette and scroll until you find `Label`:
+We will first embed out View Controller in a `Navigation Controller`. To do this, select the View Controller and, in the top menu bar, select Editor -> Embed In -> Navigation Controller:
 
-<p align="center"> <img src="/images/uiPalette.png" align="center"> </p>
+<p align="center"> <img src="/images/navigationController.png" align="center"> </p>
 
-You can drag components from the UI Palette into your View Controller. Go ahead and drag a `Label` over and drop it on somewhere on the view. The process should look something like this:
+Your storyboard should now look similar to this:
 
-<p align="center"> <img src="/images/dragLabel.png" align="center"> </p>
+<p align="center"> <img src="/images/navStoryboard.png" align="center"> </p>
 
-Voila! There is a label now on your screen! You can actually customize the label by clicking on it and going to the **Attributes tab** on the right of the screen:
+### Map Kit View
 
-<p align="center"> <img src="/images/editLabel.png" align="center"> </p>
+In order to display pins on the map, we are going to work with the Interface builder and the UI Palette. Go ahead to the UI Palette and scroll until you find `Map Kit View`:
 
-Here at the Attributes tab, you can edit the text of your label, the color, the font, the size, and many more! For this tutorial, why don't you edit the text of the label so that it reads `Guess the Number`.
+<p align="center"> <img src="/images/mapKitView.png" align="center"> </p>
 
-Now, in order to actually input a guess, you will need a `UI Textfield`, and you will also need a `UI Button` in order to submit your guess. Go ahead to the UI Palette again and drag a button and text field to your screen. Also edit the textfield and the button in any way you want. For this tutorial, edit all the features in the view so that it looks like this:
+Select `Map Kit View`, and drag and drop it in your view controller:
 
-<p align="center"> <img src="/images/finalLayout.png" align="center"> </p>
+<p align="center"> <img src="/images/dragMap.png" align="center"> </p>
 
-Awesome! Now we have our view! If you run the application on the simulator, then you should be able to see the image above as the final layout on your phone! While this is great progress, we still need to be able to actually provide functionality to the app.
+Resize your map and add some constraints so that it occupies the whole screen:
 
-### Accio Linking!
+<p align="center"> <img src="/images/mapConstraints.png" align="center"> </p>
 
-In order to provide functionality to the app, there must be a way to connect the label, text field, and button to actual code. Luckily, there is a way! The ViewController displayed in front of you is automatically connected to a file called `ViewController.swift`. Before you open the file up, first click on the view you have in front of you. Now, at the top right corner of the Xcode interface, there is a toolbar. Go ahead and click on what looks like two circles intertwining. This allows you to see both the view from the storyboard and the swift file connected to that view simultaneously:
+Awesome! Now we have our view! If you run the application on the simulator, however, you will see that the app won't run, and you get an error that says "uncaught exception 'NSInvalidUnarchiveOperationException', reason: 'Could not instantiate class named MKMapView'". This is because, although we already have our `MKMapView` on the storyboard, we still need to add the `MapKit` framework to our project.
+
+To do this, select your project in the project navigator (top left corner), select the Pin Drop target, and press the "+" button in "Linked Frameworks and Libraries."
+
+<p align="center"> <img src="/images/addMapKitFramework.png" align="center"> </p>
+
+Search for `MapKit`, select it, and press "add".
+
+<p align="center"> <img src="/images/addMapKit.png" align="center"> </p>
+
+If you run the app on the simulator, you should now be able to see the map.
+
+<p align="center"> <img src="/images/mapScreenShot.png" align="center"> </p>
+
+### IBOutlet
+
+For the final step in this section, we will be creating an `IBOutlet` that connects our map to Swift code. The ViewController displayed in the storyboard is automatically connected to a file called `ViewController.swift`. Before you open the file up, first click on the view you have in front of you. Now, at the top right corner of the Xcode interface, there is a toolbar. Go ahead and click on what looks like two circles intertwining. This allows you to see both the view from the storyboard and the swift file connected to that view simultaneously:
 
 <p align="center"> <img src="/images/twoScreen.png" align="center"> </p>
 
-Now, let's start with linking the label in our ViewController to the actual Swift code. In order to do this, you click on the label, control-click on it, and drag the blue line that appears to the swift file:
+Let's link the map in our ViewController to the actual Swift code. In order to do this, click on the map, control-click on it, and drag the blue line that appears to the swift file. Then, once you release the blue line, a little screen will pop up as such:
 
-<p align="center"> <img src="/images/linkage.png" align="center"> </p>
+<p align="center"> <img src="/images/mapOutlet.png" align="center"> </p>
 
-Then, once you release the blue line, a little screen will pop up as such:
+With this screen, you can specify what type of connection you'll make between the label and the code. The type of connection we will need for the map is an `IBOutlet`. Go ahead and name the connection `mapView`, and then click on `Connect`. The end result should look like this:
 
-<p align="center"> <img src="/images/addOutlet.png" align="center"> </p>
+<p align="center"> <img src="/images/outletCode.png" align="center"> </p>
 
-With this screen, you can specify what type of connection you'll make between the label and the code. The type of connection we will need for the label is an `IBOutlet`, which just allows you to edit the label within the code as needed. Go ahead and name the connection `guessLabel`, and then click on `Connect`. The end result should look like this:
-
-<p align="center"> <img src="/images/guessLabel.png" align="center"> </p>
-
-Go ahead and do the same linking process to the text field in the view, and name that connection `guessTextField`.
+If you get an error, make sure you import `MapKit` at the top of your swift file.
 
 ### Next Time
 
-Awesome! Now we have added connections for both the label and the text field to Swift code! In the next part, we will be adding some functionality for generating a random number to guess, and we will also be connecting the button to the code.
+Awesome! Now we have our added a connection for our map to Swift code! In the next part, we will be adding some functionality for dropping pins on the map.
