--- a/P1/P1.md
+++ b/P1/P1.md
@@ -1,4 +1,4 @@
-## Part 1: Create new project
+## Part 1: Creating your Xcode Project
 
 This tutorial will teach you how to build an app where you can drop, and save, pins on a map!
 
