--- a/P2/P2.md
+++ b/P2/P2.md
@@ -68,7 +68,7 @@ With this screen, you can specify what type of connection you'll make between th
 
 <p align="center"> <img src="/images/outletCode.png" align="center"> </p>
 
-If you get an error, make sure you import `MapKit` at the top of your swift file.
+If you get an error, make sure you import `MapKit` at the top of your Swift file.
 
 ### Next Time
 
