--- a/P3/P3.md
+++ b/P3/P3.md
@@ -1,19 +1,1 @@
-### Accio Linking!
-
-In order to provide functionality to the app, there must be a way to connect the label, text field, and button to actual code. Luckily, there is a way! The ViewController displayed in front of you is automatically connected to a file called `ViewController.swift`. Before you open the file up, first click on the view you have in front of you. Now, at the top right corner of the Xcode interface, there is a toolbar. Go ahead and click on what looks like two circles intertwining. This allows you to see both the view from the storyboard and the swift file connected to that view simultaneously:
-
-<p align="center"> <img src="/images/twoScreen.png" align="center"> </p>
-
-Now, let's start with linking the label in our ViewController to the actual Swift code. In order to do this, you click on the label, control-click on it, and drag the blue line that appears to the swift file:
-
-<p align="center"> <img src="/images/linkage.png" align="center"> </p>
-
-Then, once you release the blue line, a little screen will pop up as such:
-
-<p align="center"> <img src="/images/addOutlet.png" align="center"> </p>
-
-With this screen, you can specify what type of connection you'll make between the label and the code. The type of connection we will need for the label is an `IBOutlet`, which just allows you to edit the label within the code as needed. Go ahead and name the connection `guessLabel`, and then click on `Connect`. The end result should look like this:
-
-<p align="center"> <img src="/images/guessLabel.png" align="center"> </p>
-
-Go ahead and do the same linking process to the text field in the view, and name that connection `guessTextField`.
+## Part 3: Dropping Pins on the Map
